--- a/templates/patient-vis.html
+++ b/templates/patient-vis.html
@@ -79,7 +79,7 @@
     </section>
     <section class="section has-background-light">
         <div class="container">
-            <p class="title is-5"> Event Filteres</p>
+            <p class="title is-5"> Event Filters</p>
             <p class="subtitle is-6"> Interactive filters to assist information mining</p>
             <nav class="level">
                 <div class="level-left">
